fix: style nav btn-outline-dark button to have better contrast on hover

--- a/pages/assets/css/basic.css
+++ b/pages/assets/css/basic.css
@@ -529,7 +529,9 @@ strong {
 .navbar-dark .btn-outline-dark {
     --bs-btn-color: white;
     --bs-btn-border-color: white;
-    --bs-btn-hover-bg: black;
+    --bs-btn-hover-bg: white;
+    --bs-btn-hover-color: black;
+    --bs-btn-hover-border-color: white;
 }
 
 .navbar-toggler {
